<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newpass"
        android:textColor="@color/font"
        android:textStyle="bold"
        android:textSize="25dp"
        android:gravity="center"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newpw"
        android:textColor="@color/font"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/new_password"
        android:inputType="numberPassword"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="5dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textColor="@color/font"
            android:backgroundTint="@color/button"
            android:layout_marginRight="50dp"
            android:id="@+id/new_ok_btn"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancle"
            android:textColor="@color/font"
            android:backgroundTint="@color/button"
            android:id="@+id/new_cancle_btn"/>


    </LinearLayout>


</LinearLayout>