<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddResumeActivity"
    android:orientation="vertical"
    android:background="@color/background">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/add_resume_toolbar"
        app:layout_collapseMode="pin"
        app:title="@string/add_res"
        app:titleTextColor="@color/font"
        android:background="@color/button"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="@color/font"
        android:gravity="center"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/font"
        android:textSize="15dp"
        android:hint="@string/title"
        android:layout_margin="10dp"
        android:id="@+id/add_resume_tilte"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="@color/font"
        android:gravity="center"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/font"
        android:textSize="15dp"
        android:hint="@string/date"
        android:inputType="text"
        android:layout_margin="10dp"
        android:id="@+id/add_resume_date"/>

</LinearLayout>