<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="40dp"
        android:textColor="@color/font"
        android:gravity="center"
        android:layout_marginBottom="50dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardCornerRadius="75dp"
        app:cardElevation="0dp"
        android:layout_marginBottom="20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/user_basic"
            android:scaleType="centerCrop"
            android:id="@+id/intro_userImageView"/>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/font"
            android:textSize="30dp"
            android:textStyle="bold"
            android:gravity="center"/>

        <EditText
            android:id="@+id/intro_edit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/font"
            android:textSize="30dp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:inputType="text"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:backgroundTint="@color/button"
            android:textColor="@color/font"
            android:layout_marginLeft="5dp"
            android:id="@+id/intro_savebtn"/>

    </LinearLayout>

</LinearLayout>